shubh: code cleanup